syntax = "proto3";

package auth;

option go_package = "./pkg/pb";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc AdminRegister(AdminRegisterRequest)returns(AdminRegisterResponse){}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc AdminLogin(AdminLoginRequest)returns(AdminLoginResponse){}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}

// Register

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  int64 status = 1;
  string error = 2;
}

message AdminRegisterRequest {
  string email = 1;
  string password = 2;
}

message AdminRegisterResponse {
  int64 status = 1;
  string error = 2;
}

// Login

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
}

message AdminLoginRequest {
  string email = 1;
  string password = 2;
}

message AdminLoginResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
}
// Validate

message ValidateRequest { string token = 1; }

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  int64 Id = 3;
  string role = 4;
}